gke-yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: allocations-app-v1
  name: allocations-app-v1-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: allocations-app-v1
      tier: allocations-app-v1-web
  template:
    metadata:
      labels:
        app: allocations-app-v1
        tier: allocations-app-v1-web
    spec:
      containers:
      - image: gcr.io/allocations-accounting-v1/allocations-accounting:v1.0
        name: allocations-app-v1-app
        ports:
        - containerPort: 8081
