gke-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: allocations-app-v1-svc
  annotations:
    cloud.google.com/app-protocols: '{"app-https-port":"HTTPS","app-http-port":"HTTP"}'
    # Later to enable IAP, (after creating a secret and a BackendConfig) the following
    # beta.cloud.google.com/backend-config: '{"default": "allocations-iap-config-default"}'
  labels:
    app: allocations-app-v1
spec:
  type: NodePort
  selector:
    app: allocations-app-v1
    tier: allocations-app-v1-web
  ports:
    - name: app-https-port
      port: 8081
      targetPort: 8081
    - name: app-http-port
      port: 8080
      targetPort: 8080
